# ocaml-sha

./: .gitignore  .travis.yml  CHANGES.md  META  Makefile  README  bitfn.h  c_flags.ml  cksum.ml  dune  dune-project  hash.ml  hash.mli  hash_test.ml  jbuild  md5.h  md5.ml  md5.mli  md5_stubs.c  op.h  sha.install  sha.ml  sha.opam  sha.test.ml  sha1.c  sha1.h  sha1.ml  sha1.mli  sha1.test.ml  sha1_stubs.c  sha1c.c  sha1sum.ml  sha256.c  sha256.h  sha256.ml  sha256.mli  sha256_stubs.c  sha256c.c  sha512.c  sha512.h  (+7 more)
test/: bench.ml  dune  jbuild  shasum.ml  shatest.ml
