opam-version: "1.2"
maintainer:   "dave@recoil.org"
authors:      [
"Vincent Hanquez" "Thomas Gazagnaire" "Goswin von Brederlow"
  "Eric Cooper" "Florent Monnier" "Forrest L Norvell"
  "Vincent Bernadoff" "David Scott"
]
homepage:     "https://github.com/djs55/ocaml-sha"
bug-reports:  "https://github.com/djs55/ocaml-sha/issues"
dev-repo:     "https://github.com/djs55/ocaml-sha.git"
license:      "ISC"

build: [["dune" "build" "-p" name "-j" jobs]]

build-test: [["dune" "runtest" "-p" name]]

depends: [
  "dune" {build & >= "1.10"}
  "ounit" {test}
]

available: [ ocaml-version >= "4.02.3" ]
