(executable
  (name shasum)
  (modules shasum)
  (libraries sha))

(executable
  (name shatest)
  (modules shatest)
  (libraries sha oUnit))

(alias
  (name runtest)
  (deps (:test shatest.exe) sample.txt)
  (action (run %{test})))

(executable
  (name bench)
  (modules bench)
  (libraries sha benchmark))
